--- a/src/assets/scss/init.scss
+++ b/src/assets/scss/init.scss
@@ -170,7 +170,93 @@ input{
     background: $bg-g;
     border-radius: .44rem;
   }
-
+ // toast样式
+  /*toast*/
+  .wr-toast {
+    background: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    border-radius: 0.05rem;
+    color: #ffffff;
+    position: fixed;
+    z-index: 3;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    min-width: .7rem;
+    padding: 0.15rem;
+    // display: none;
+  }
+  .wr-toast .iconfont {
+    display: block;
+    font-size: .5rem;
+  }
+  .wr-toast-content {
+    font-size: 0.14rem;
+  }
+  .wr-toast-loading {
+    border-radius: 100%;
+    margin: 0.1rem 0;
+    margin-bottom: 0.06rem;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    border: 2px solid #ffffff;
+    border-bottom-color: transparent;
+    height: 0.45rem;
+    width: 0.45rem;
+    background: transparent;
+    display: inline-block;
+    -webkit-animation: rotate 1s 0s linear infinite;
+    animation: rotate 1s 0s linear infinite;
+  }
+  /*dialog加载中那一套*/
+  .wr-dialog {
+    width: 2.7rem;
+    text-align: center;
+    position: fixed;
+    z-index: 999;
+    left: 50%;
+    margin-left: -1.35rem;
+    margin-top: 0;
+    top: 45%;
+    border-radius: 0.06rem;
+    opacity: 0;
+    background-color: #ffffff;
+    -webkit-transform: translate3d(0, 0, 0) scale(1.2);
+    transform: translate3d(0, 0, 0) scale(1.2);
+    -webkit-transition-property: -webkit-transform, opacity;
+    transition-property: transform, opacity;
+    /*display: none;*/
+  }
+  @keyframes rotate {
+    0% {
+      -webkit-transform: rotate(0deg) scale(1);
+      transform: rotate(0deg) scale(1);
+    }
+  
+    50% {
+      -webkit-transform: rotate(180deg) scale(1);
+      transform: rotate(180deg) scale(1);
+    }
+    100% {
+      -webkit-transform: rotate(360deg) scale(1);
+      transform: rotate(360deg) scale(1);
+    }
+  }
+  @-webkit-keyframes rotate {
+    0% {
+      -webkit-transform: rotate(0deg) scale(1);
+      transform: rotate(0deg) scale(1);
+    }
+    50% {
+      -webkit-transform: rotate(180deg) scale(1);
+      transform: rotate(180deg) scale(1);
+    }
+    100% {
+      -webkit-transform: rotate(360deg) scale(1);
+      transform: rotate(360deg) scale(1);
+    }
+  }
+  /* loading结束 */
 
 // 隐藏元素
 .hidden{
